Continúo implementando el editor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="lib/codemirror.css">
+    <link rel="stylesheet" href="lib/addon/dialog/dialog.css">
+    <link rel="stylesheet" href="lib/addon/search/matchesonscrollbar.css">
     <style>
             .breakpoints {width: .8em;}
             .breakpoint { color: rgb(39, 179, 69); }
@@ -30,7 +32,15 @@
     <!--Librería CodeMirror para simular editor en textArea-->
     <script src="lib/codemirror.js"></script>
     <script src="lib/mode/javascript/javascript.js"></script>
-    <script src="lib/addon/selection/active-line.js"></script>>
+    <script src="lib/addon/selection/active-line.js"></script>
+
+    <script src="lib/addon/dialog/dialog.js"></script>
+    <script src="lib/addon/search/searchcursor.js"></script>
+    <script src="lib/addon/search/search.js"></script>
+    <script src="lib/addon/scroll/annotatescrollbar.js"></script>
+    <script src="lib/addon/search/matchesonscrollbar.js"></script>
+    <script src="lib/addon/search/jump-to-line.js"></script>
+
     <!--La librería Turing-->
     <script src="js/TM_Clases.js"></script>
     <script src="js/TM_Ejemplos.js"></script>
