Listo el editor

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <textarea id="code" name="code">...</textarea>
     </form>
     <div>
-        <button id="TCarga" type="button" onclick="carga()">Carga</button>
-        <button id="TRun" type="button" onclick="run()">Run</button>
+        <button id="Cargar" type="button" onclick="carga()">Carga</button>
+        <button id="Run" type="button" onclick="run()">Run</button>
+        <button id="Marcar" type="button" onclick="marcar()">Marcar</button>
     </div>
     <!--Librería CodeMirror para simular editor en textArea-->
     <script src="lib/codemirror.js"></script>
