La primera versión de ejecutar una vez

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
             .breakpoints {width: .8em;}
             .breakpoint { color: rgb(39, 179, 69); }
             .CodeMirror {border: 1px solid #aaa;}
-            .styled-background { background-color: #ff7; 
+            .styled-background { background-color: #ff7; }
+            .TCabeza { color: red ; display:inline; margin:2px;text-decoration: underline wavy ; font-size:large;}
     </style>
 </head>
 <body>
     <h1>La cinta</h1>
     <div id="TuringMachine">
-        <label id="TCinta">Cinta</label>
+        <label id="lblCinta">Cinta</label>
+        <div id="TCinta">11<div class="TCabeza">0</div>1000</div>
         <br>
         <label>Estado: </label> 
         <label id="TEstado">Estado</label>
