--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="lib/addon/dialog/dialog.css">
     <link rel="stylesheet" href="lib/addon/search/matchesonscrollbar.css">
     <style>
-            .breakpoints {width: .8em;}
-            .breakpoint { color: rgb(39, 179, 69); }
+            .breakpoints {width: .6em;}
+            .breakpoint { color: #E25E26; }
             .CodeMirror {border: 1px solid #aaa;}
-            .styled-background { background-color: #77ff33; }
+            .styled-background { background-color:  	#EDAC64; }
             .TCabeza { color: red ; display:inline; margin:2px;text-decoration: underline wavy ; font-size:large;}
+            .TLineaActual {background-color: rgb(73, 177, 209); }
     </style>
 </head>
 <body>
