Empiezo el manejo de los botones y el alto

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     </div>
     <div>
         <button id="Cargar" type="button" onclick="carga()">Carga</button>
+        <button id="Step" type="button" onclick="step()">Step</button>
         <button id="Run" type="button" onclick="run()">Run</button>
-        <button id="Marcar" type="button" onclick="marcar(4)">Marcar</button>
+        <button id="Parar" type="button" onclick="parar()">Parar</button>
     </div>
     <form style="width: 400px;">
         <textarea id="code" name="code">...</textarea>
