Inicio del timer

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <button id="Run" type="button" onclick="run()">Run</button>
         <button id="Parar" type="button" onclick="parar()">Parar</button>
     </div>
+    <div>
+        <label id="TMensaje">...</label>
+    </div>
     <form style="width: 400px;">
         <textarea id="code" name="code">...</textarea>
     </form>
