Primera versión del Run secuencial

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </div>
     <div>
         <button id="Cargar" type="button" onclick="carga()">Carga</button>
-        <button id="Step" type="button" onclick="step()">Step</button>
-        <button id="Run" type="button" onclick="run()">Run</button>
-        <button id="Parar" type="button" onclick="parar()">Parar</button>
+        <button id="Step" type="button" onclick="ejecutarUnaVez()">Step</button>
+        <button id="Run" type="button" onclick="RunButton()">Run</button>
+        <button id="Parar" type="button" onclick="StopButton()">Parar</button>
     </div>
     <div>
         <label id="TMensaje">...</label>
