Convertir Obj del JSON a una clase TM constru

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <button id="Step" type="button" onclick="ejecutarUnaVez()">Step</button>
         <button id="Run" type="button" onclick="RunButton()">Run</button>
         <button id="Parar" type="button" onclick="StopButton()">Parar</button>
+        <button id="ListaTM" type="button" onclick="apiGET_TM_Web()">Listar</button>
     </div>
     <div>
         <label id="TMensaje">...</label>
