Graba en la Web con POST y Fetch

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   <body>
     <h1>La Máquina de Turing</h1>
     <div id="TuringMachine">
+       Id:  <input type="text" id="TId"  /> 
+       <br>
       <label id="lblCinta">Cinta</label>
       <div id="TCinta">
         11
@@ -69,9 +71,8 @@
       <button id="Step" type="button" onclick="ejecutarUnaVez()">Step</button>
       <button id="Run" type="button" onclick="RunButton()">Run</button>
       <button id="Parar" type="button" onclick="StopButton()">Parar</button>
-      <button id="ListaTM" type="button" onclick="apiGET_TM_Web()">
-        Listar
-      </button>
+      <button id="ListaTM" type="button" onclick="apiGET_TM_Web()">Listar</button>
+      <button id="GuardarWeb" type="button" onclick="grabarTM_Web()">Listar</button>
     </div>
     <div>
       <label id="TMensaje">...</label>
