Implementa lista y carga de las máquinas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="lib/codemirror.css" />
     <link rel="stylesheet" href="lib/addon/dialog/dialog.css" />
     <link rel="stylesheet" href="lib/addon/search/matchesonscrollbar.css" />
@@ -67,7 +68,7 @@
       </table>
     </div>
     <div>
-      <button id="Cargar" type="button" onclick="carga()">Carga</button>
+      <button id="Cargar" type="button" onclick="carga('Victor03')">Carga</button>
       <button id="Step" type="button" onclick="ejecutarUnaVez()">Step</button>
       <button id="Run" type="button" onclick="RunButton()">Run</button>
       <button id="Parar" type="button" onclick="StopButton()">Parar</button>
