Arreglos del código

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div>
       <button id="ListaTM" type="button" onclick="apiGET_TM_Web()">Listar</button>
       <button id="GuardarWeb" type="button" onclick="actualizarTM_Web()">Guardar</button>
-      <button id="GuardarWeb" type="button" onclick="grabarTM_Web()">Crear</button>
+      <button id="GuardarWeb" type="button" onclick="grabarTM_Web()">Guardar como ...</button>
     </div>
     <div>
       <label id="TMensaje">...</label>
